--- a/changelog/breaking-changes-and-migration/migration-guides.mdx
+++ b/changelog/breaking-changes-and-migration/migration-guides.mdx
@@ -1,259 +1,243 @@
 ---
 title: "Migration Guides"
-description: "Practical, step-by-step guides to help users transition to new versions when breaking changes occur. Includes code snippets, configuration file adjustments, and troubleshooting tips specific to recent upgrades."
+description: "Step-by-step guides help developers transition codebases to new major versions, addressing deprecated functionality, required flag or build changes, and adoption of new APIs or behaviors."
 ---
 
 # Migration Guides
 
-This page provides practical, step-by-step instructions to assist users in transitioning their codebases when upgrading GoogleMock and GoogleTest versions that introduce breaking changes. The guides focus on helping you adapt your mock class definitions, expectation clauses, and test configurations to the latest API conventions and behavioral changes without disruption.
+This page provides comprehensive, step-by-step guides to assist developers in upgrading GoogleTest major versions smoothly. It focuses on the necessary codebase transitions, including handling deprecated functionality, updating required flags or build configurations, and adopting new APIs or behavioral changes.
 
 ---
 
-## Why Migration Guides Matter
+## 1. Preparing for Upgrade
 
-When upgrading to newer versions of GoogleMock, certain API patterns and behaviors may change to improve usability, correctness, or performance. These changes can be breaking, requiring you to adapt your existing tests to continue functioning correctly. This page serves as a reliable companion during that transition, offering clear, actionable advice to guide you through common breaks and how to fix them effectively.
+Before beginning the migration, ensure your development environment meets the minimum requirements for the target GoogleTest version. Since the 1.17.x release, GoogleTest requires at least C++17 support across supported platforms (Linux, Windows, Mac). Verify your compiler and build system are properly configured for this standard.
 
----
+### Key Preparation Steps:
 
-## Understanding Key Breaking Changes
+- Confirm your project is building with C++17 or higher.
+- Review your build system (e.g., CMake) for compatibility with the new GoogleTest version.
+- Backup your existing test code and configuration.
 
-Before diving into specific migrations, let’s outline some critical changes that often trigger migration needs:
-
-- **Unified `MOCK_METHOD` Macro:** Older mock declarations using legacy macros (`MOCK_METHODn`, `MOCK_CONST_METHODn`, etc.) have been superseded by the generic and consistent `MOCK_METHOD` macro. Migrating code to use the new macro ensures better maintainability and compatibility.
-
-- **Clause Ordering in `EXPECT_CALL` and `ON_CALL`:** The introduction of strict ordering rules for clauses such as `.With()`, `.Times()`, `.WillOnce()`, `.WillRepeatedly()`, and `.RetiresOnSaturation()` helps avoid ambiguous mock behavior but requires reordering existing expectations.
-
-- **Handling of Move-Only Types:** Support for mocking methods taking or returning move-only types like `std::unique_ptr` has improved. Where legacy workarounds were used, migration to direct support is encouraged.
-
-- **Mock Destructor Testing:** Mocking destructors directly is not supported. Instead, replace destructor tests with a mock method called from the destructor.
-
-- **Strictness Modes:** Changes in default mocking behavior and recommendation to use `NiceMock` or `StrictMock` wrappers where appropriate.
+<Tip>
+Starting the migration with a clean build environment prevents unexpected compatibility issues and helps isolate any migration-related changes.
+</Tip>
 
 ---
 
-## Migration Step 1: Converting Old-Style Mock Method Macros to New `MOCK_METHOD`
+## 2. Deprecated Functionality and API Changes
 
-Legacy mock method macros are being deprecated for the unified `MOCK_METHOD` macro. This macro improves clarity and compatibility by requiring explicit specification of return types, method names, argument lists, and optional specifiers like `const` and `override`.
+GoogleTest’s major version updates may deprecate previous APIs or alter behaviors. This section guides you through common breaking points and how to update your test code accordingly.
 
-### What You Had (Legacy Macro)
+### 2.1 Test Suite Terminology Update
 
-```cpp
-class MockFoo : public Foo {
- public:
-  MOCK_METHOD1(FooMethod, bool(int));
-  MOCK_CONST_METHOD0(GetValue, int());
-};
-```
+GoogleTest has shifted terminology from *Test Case* to *Test Suite* to align with contemporary standards (including ISTQB). APIs formerly named using `TestCase` are deprecated in favor of `TestSuite`.
 
-### What to Use Now
+**Migration actions:**
 
-```cpp
-class MockFoo : public Foo {
- public:
-  MOCK_METHOD(bool, FooMethod, (int), (override));
-  MOCK_METHOD(int, GetValue, (), (const, override));
-};
-```
+- Replace all instances of `TestCase` in test suite declarations with `TestSuite`.
+- Switch from older deprecated macros towards the preferred API (e.g., preferential use of `TEST_SUITE` where applicable).
 
-### Practical Tips
+### 2.2 Assertion Macro Behavior
 
-- Wrap argument or return types containing commas in extra parentheses or use `using` alias to avoid macro parsing issues.
-- Always place `MOCK_METHOD` declarations in the `public:` section.
-- Add `override` for virtual overrides to ensure correctness.
+- `ASSERT_*` macros produce fatal failures and abort the current function immediately.
+- `EXPECT_*` macros produce nonfatal failures allowing tests to continue.
 
----
+Be aware that improper use of `ASSERT_*` might skip tear-down or clean-up code, potentially causing resource leaks.
 
-## Migration Step 2: Correct Ordering of Clause Specifiers in `EXPECT_CALL` and `ON_CALL`
+**Tip:** Review your use of assertions to ensure critical failures use `ASSERT_*` while allowing non-critical verifications to use `EXPECT_*`, following modern best practices.
 
-GoogleMock now enforces the order in which expectation modifiers appear. Incorrect ordering leads to compiler or runtime errors.
+### 2.3 Handling of Parameterized Tests
 
-### Correct Clause Ordering
+With extensive enhancements to parameterized (`TEST_P`) and typed tests (`TYPED_TEST`), validate that all your parameterized tests are properly instantiated.
 
-1. `.With()` - Optional, and must be the first modifier if used.
-2. `.Times()` - Optional, must follow `.With()` if present.
-3. `.InSequence()` - Optional, can be repeated, after `.Times()`.
-4. `.After()` - Optional, after `.InSequence()`.
-5. `.WillOnce()` - Optional, multiple allowed, after `.After()`.
-6. `.WillRepeatedly()` - Optional, once, after `.WillOnce()`.
-7. `.RetiresOnSaturation()` - Optional, once, last modifier.
+**Key checklist:**
 
-### What You Might See (Incorrect Ordering)
+- Ensure every `TEST_P` test suite has a matching `INSTANTIATE_TEST_SUITE_P`.
+- If some parameterized suites are intentionally uninstantiated, explicitly annotate them with `GTEST_ALLOW_UNINSTANTIATED_PARAMETERIZED_TEST`.
 
-```cpp
-EXPECT_CALL(foo, Bar())
-    .Times(1)
-    .With(_)
-    .WillOnce(Return(5)); // Invalid: .With() must be before .Times()
-```
+### 2.4 Main Function and Initialization Updates
 
-### Corrected Version
+- Use `testing::InitGoogleTest(&argc, argv)` to initialize before calling `RUN_ALL_TESTS()`.
+- Prefer linking against the `gtest_main` library to avoid writing a custom `main()` unless specific customizations are needed.
 
-```cpp
-EXPECT_CALL(foo, Bar())
-    .With(_)
-    .Times(1)
-    .WillOnce(Return(5));
-```
+### 2.5 Important Flag Changes
 
-### Recommendations
+Some flags related to death tests and output formatting have changed between major versions. Review flag defaults and behavior:
 
-- Review your existing mocks for any violations.
-- Use the migration guides or compiler diagnostics to identify incorrect usages.
+- Verify that your use of death test styles (`--gtest_death_test_style`) matches either `fast` or `threadsafe` styles depending on your test requirements.
+- Adjust filtering rules if needed to accommodate any changes in test name matching or filtering semantics.
 
 ---
 
-## Migration Step 3: Mocking Methods With Move-Only Types
+## 3. Required Build and Configuration Adjustments
 
-GoogleMock now natively supports mocking methods that accept or return move-only types (e.g., `std::unique_ptr`).
+Major version changes may require updated build invocations and configuration to support new standard compliance and features.
 
-### Legacy Workaround Example
+### 3.1 Compiler Flags
 
-```cpp
-class MockBuzzer : public Buzzer {
- public:
-  MOCK_METHOD(bool, DoShareBuzz, (Buzz* buzz, Time timestamp));
+Ensure your compiler flags include `-std=c++17` (or later). Modern GoogleTest versions will fail to build without this.
 
-  bool ShareBuzz(std::unique_ptr<Buzz> buzz, Time timestamp) override {
-    return DoShareBuzz(buzz.get(), timestamp);
-  }
-};
-```
+### 3.2 Dependency Updates
 
-### Modern Approach
+GoogleTest may now depend on newer versions of some tools and libraries:
 
-```cpp
-class MockBuzzer : public Buzzer {
- public:
-  MOCK_METHOD(std::unique_ptr<Buzz>, MakeBuzz, (StringPiece text), (override));
-  MOCK_METHOD(bool, ShareBuzz, (std::unique_ptr<Buzz> buzz, int64_t timestamp), (override));
-};
-```
-
-### Usage Tips
-
-- When returning a move-only value, prefer lambdas in `.WillOnce` or `.WillRepeatedly` clauses rather than `Return(std::move(...))`.
-- If the mock method accepts move-only arguments, use lambdas to specify behavior where built-in actions fail.
+- Check integration with `Abseil` if planned since it is a forthcoming dependency.
+- Validate compatibility with your CI systems handling of test runners and output streams.
 
 ---
 
-## Migration Step 4: Testing Mock Destructors
+## 4. Migration Workflow
 
-Since mocking destructors directly is unsupported, adapt tests to use a mock method invoked from the destructor.
+Follow the sequence below to migrate your test code safely:
 
-### Pattern
-
-```cpp
-class MockFoo : public Foo {
- public:
-  MOCK_METHOD(void, Die, ());
-
-  ~MockFoo() override { Die(); }
-};
-```
-
-### Test Usage
-
-```cpp
-Sequence s;
-EXPECT_CALL(*bar, A());
-EXPECT_CALL(*foo, Die());  // Expect destruction here
-EXPECT_CALL(*bar, B());
-
-// Your test code exercising foo and bar
-```
-
-### Benefits
-
-- You can specify ordering constraints involving object destruction.
-- Avoids issues with virtual destructor mocking.
-
----
-
-## Migration Step 5: Leveraging Strictness Wrappers (`NiceMock` and `StrictMock`)
-
-GoogleMock now recommends explicit use of `NiceMock`, `StrictMock`, or default naggy mocks for better control over uninteresting call warnings.
-
-### Usage
-
-- Use `NiceMock<YourMock>` to suppress uninteresting call warnings.
-- Use `StrictMock<YourMock>` to treat uninteresting calls as errors.
-- Default mocks are naggy and print warnings for uninteresting calls.
-
-### Example
-
-```cpp
-using ::testing::NiceMock;
-NiceMock<MockFoo> mock_foo;
-EXPECT_CALL(mock_foo, DoThis());
-```
-
-### Best Practices
-
-- Use `NiceMock` for cleaner test output when you don't care about certain calls.
-- Use `StrictMock` to catch unexpected calls comprehensively.
+<Steps>
+<Step title="Backup Your Code">
+Create a full backup of your current test code and environment before upgrading.
+</Step>
+<Step title="Update Build System">
+Modify your build scripts (e.g., CMakeLists.txt) to require at least C++17.
+</Step>
+<Step title="Upgrade GoogleTest Library">
+Download and integrate the new GoogleTest version, replacing older libraries.
+</Step>
+<Step title="Refactor Deprecated APIs">
+Replace deprecated test framework APIs (e.g., `TestCase` to `TestSuite`).
+</Step>
+<Step title="Validate Parameterized Tests">
+Ensure all `TEST_P` tests are properly instantiated, and add any missing macro or instantiation calls.
+</Step>
+<Step title="Adjust Assertion Usage">
+Review `ASSERT_*` and `EXPECT_*` macros usage for proper failure handling.
+</Step>
+<Step title="Update Your main() Function">
+If you provide a custom `main()`, use `InitGoogleTest()` and return `RUN_ALL_TESTS()`.
+</Step>
+<Step title="Run and Validate">
+Build and run all tests, watching for deprecated usage warnings or test failures.
+</Step>
+<Step title="Fix Issues and Iterate">
+Address compilation errors, runtime failures, or behavioral changes as needed.
+</Step>
+</Steps>
 
 ---
 
-## Troubleshooting Common Migration Issues
+## 5. Handling Breaking Changes with Examples
 
-### Expectation Not Met After Migration
+### 5.1 Switching from TestCase to TestSuite
 
-- Verify any reordered clauses are correctly placed.
-- Check that all mocked methods use the new `MOCK_METHOD` signature.
-- Confirm `override` is present for all mock methods.
+Old code:
 
-### Compilation Errors from Legacy Macros
+```cpp
+TEST_CASE(MyTestCase, TestName) {
+  EXPECT_TRUE(SomeCondition());
+}
+```
 
-- Replace all `MOCK_METHODn` and variants with the modern `MOCK_METHOD`.
-- Wrap complex argument or return types containing commas with extra parentheses or use type aliases.
+New preferred approach:
 
-### Unrecognized Clause Usage Errors
+```cpp
+TEST(MyTestSuite, TestName) {
+  EXPECT_TRUE(SomeCondition());
+}
+```
 
-- Double-check clause order in `EXPECT_CALL` and `ON_CALL` statements.
-- Avoid chaining multiple `.With()` or repeated `.Times()` clauses.
+Or when using fixtures:
+
+```cpp
+class MyTestSuite : public testing::Test {};
+
+TEST_F(MyTestSuite, TestName) {
+  EXPECT_EQ(ActualValue(), ExpectedValue());
+}
+```
+
+### 5.2 Proper Parameterized Test Instantiation
+
+Ensure every `TEST_P` has an `INSTANTIATE_TEST_SUITE_P` call:
+
+```cpp
+TEST_P(MyParamTestSuite, DoesSomething) {
+    EXPECT_TRUE(FunctionUnderTest(GetParam()));
+}
+
+INSTANTIATE_TEST_SUITE_P(MyInstantiation,
+                         MyParamTestSuite,
+                         testing::Values(1, 2, 3));
+```
+
+If no instantiation is needed, suppress warnings:
+
+```cpp
+GTEST_ALLOW_UNINSTANTIATED_PARAMETERIZED_TEST(MyParamTestSuite);
+```
+
+### 5.3 Writing main() Function Correctly
+
+Use:
+
+```cpp
+int main(int argc, char **argv) {
+  testing::InitGoogleTest(&argc, argv);
+  return RUN_ALL_TESTS();
+}
+```
+
+Avoid ignoring the return value of `RUN_ALL_TESTS()`.
+
+<Tip>
+Linking your test executable with `gtest_main` can omit the need for a custom `main()` function unless you need custom setup.
+</Tip>
 
 ---
 
-## Example Migration Patch Snippet
+## 6. Troubleshooting Common Migration Issues
 
-Before:
+### 6.1 Build Failures Due to C++ Standard
 
-```cpp
-class MockFoo : public Foo {
- public:
-  MOCK_CONST_METHOD0(GetValue, int());
-  MOCK_METHOD1(DoSomething, bool(int x));
-};
+Error messages referencing missing features or compilation errors typically indicate lacking C++17 support. Verify compiler version and flags.
 
-EXPECT_CALL(mock_foo, DoSomething(5))
-    .Times(1)
-    .With(_)
-    .WillOnce(Return(true));
-```
+### 6.2 Missing Test Discoveries
 
-After:
+Confirm test naming conventions and ensure that all tests are correctly registered. Check that parameterized tests have instantiations.
 
-```cpp
-class MockFoo : public Foo {
- public:
-  MOCK_METHOD(int, GetValue, (), (const, override));
-  MOCK_METHOD(bool, DoSomething, (int x), (override));
-};
+### 6.3 Skipped or Disabled Tests
 
-EXPECT_CALL(mock_foo, DoSomething(5))
-    .With(_)
-    .Times(1)
-    .WillOnce(Return(true));
-```
+Check if tests are disabled via macros or filtering flags. Confirm `--gtest_also_run_disabled_tests` is set if you want to include disabled tests in your run.
+
+### 6.4 Death Test Failures
+
+Check that your death tests conform to the updated style and platform requirements. Review `--gtest_death_test_style` flag and update code accordingly.
+
+<Tip>
+Refer to the [Troubleshooting Guide](https://google.github.io/googletest/getting-started/first-steps-validation/troubleshooting-setup) for detailed help on these scenarios.
+</Tip>
 
 ---
 
-## Additional Resources
+## 7. Additional Resources
 
-- [Mocking Reference](reference/mocking.md) — Comprehensive details on the mocking API.
-- [gMock Cookbook](gmock_cook_book.md) — Practical recipes and usage patterns.
-- [Legacy gMock FAQ](gmock_faq.md) — Common questions about migration and usage.
-- [Basics of Mocking](guides/mocking-best-practices/basics-of-mocking.md) — Best practices.
-- [Specifying Behavior: Actions, Matchers, and Sequences](guides/mocking-best-practices/actions-matchers-sequences.md) — For setting expectations.
+- [GoogleTest Primer](https://google.github.io/googletest/primer.html) – Core basics for writing tests.
+- [Testing Reference](https://google.github.io/googletest/reference/testing.html) – Detailed macros and API usage.
+- [Breaking Changes](./breaking-changes) – Enumerates all breaking changes by version.
+- [Release Notes](../version-history-and-release-notes/detailed-release-notes) – For complete change logs.
 
-For extensive upgrade scenarios or more detailed migration scripts, please refer to the main [Breaking Changes Summary](breaking-changes-summary.md) page.
+---
+
+## 8. Summary
+
+Migration to new major GoogleTest versions requires careful preparation, code refactoring for deprecated APIs, updating build configurations, and validating parameterized tests and assertions handling. Following these migration guides ensures a smooth transition and maintains test suite stability and reliability.
+
+<Check>
+Always test your upgrade in an isolated environment and incrementally migrate components.
+</Check>
+
+---
+
+*For detailed migration workflows for each major release, consult the accompanying version-specific migration documents linked in the release notes.*
+
+---
+
+_This page is part of the Changelog section under Breaking Changes and Migration guidance._
+
