--- a/getting-started/prerequisites-installation/system-requirements.mdx
+++ b/getting-started/prerequisites-installation/system-requirements.mdx
@@ -1,136 +1,176 @@
 ---
 title: "System Requirements"
-description: "Review the supported compilers, platforms, and minimum C++ standard requirements and ensure your development environment meets the prerequisites for GoogleTest. Includes links to foundational policies and matrixes for further details."
+description: "An overview of required compilers, build tools, C++ standards, and supported platforms for GoogleTest and GoogleMock. This page ensures your environment is compatible before you start."
 ---
 
 # System Requirements
 
-Review the supported compilers, platforms, and minimum C++ standard requirements to ensure your development environment is ready for GoogleTest. This page covers the essential prerequisites needed before building and using the framework.
+An overview of required compilers, build tools, C++ standards, and supported platforms for GoogleTest and GoogleMock. This page ensures your environment is compatible before you start.
 
 ---
 
-## Supported Platforms
+## 1. Overview
 
-GoogleTest supports a wide variety of platforms, reflecting its commitment to broad compatibility. Ensure your target development or execution platform is within the supported list to guarantee optimal functionality:
+Before setting up GoogleTest and GoogleMock in your development environment, ensure your system meets the necessary requirements. Compatibility and correct versions of compilers, C++ standards, and build tools are essential for a smooth installation and reliable operation.
 
-- Linux
-- macOS
-- Windows (including MinGW)
-- Cygwin
-- FreeBSD
-- NetBSD
-- OpenBSD
-- Solaris
-- AIX
-- iOS
-- Android
-- Embedded platforms such as ESP8266, ESP32, QNX, Haiku, and others
+This guide covers:
+- Supported operating systems and platforms
+- Compatible C++ compiler versions
+- Required C++ language standard
+- Recommended build tools
 
-> The framework automatically detects the platform during compilation. If you are working on a less common or embedded platform, check the official compatibility and consider any known limitations.
+---
 
-## Compiler and Language Requirements
+## 2. Supported Platforms
 
-GoogleTest requires a modern C++ compiler to build successfully:
+GoogleTest follows Google's [Foundational C++ Support Policy](https://opensource.google/documentation/policies/cplusplus-support). It supports the major operating systems where C++ development typically occurs.
 
-- **Minimum C++ Standard:** C++17 or later is required. Your build system should specify this explicitly, for example using CMake's `set(CMAKE_CXX_STANDARD 17)` and `set(CMAKE_CXX_STANDARD_REQUIRED ON)`.
-- Supported compilers include but are not limited to:
-  - GCC (version supporting C++17)
-  - Clang
-  - MS Visual C++ 2015 or later
-  - Intel Compiler
+### Supported Operating Systems
+- **Linux**
+- **Windows** (Desktop editions)
+- **macOS**
 
-> Note that certain features in GoogleTest leverage advanced compiler capabilities such as template support, exception handling, and thread local storage.
+For platform-specific details and version compatibility, visit our [Supported Platforms](platforms.md) page.
 
-### Special Notes on Compiler Features
+---
 
-- GoogleTest detects the availability of exception support and RTTI (run-time type information) and adjusts accordingly. If exceptions or RTTI are disabled in your compiler, verify compatibility.
-- Multi-threading support requiring pthreads is automatically detected on supported POSIX systems.
-- Windows builds support Structured Exception Handling (SEH).
+## 3. Compiler Compatibility
 
-## Dependencies and Build Tools
+GoogleTest requires a C++ compiler with support for at least **C++17**. This is a hard requirement to ensure compatibility with modern C++ features used within GoogleTest and GoogleMock.
 
-To use GoogleTest effectively, ensure the following tools and libraries are present:
+### Minimum Compiler Requirements
+- **GCC**: version 7.0 or higher
+- **Clang**: version 5.0 or higher
+- **MSVC (Microsoft Visual Studio)**: 2017 Update 3 or higher
 
-- **Build System:** CMake 3.14 or later is recommended, especially for modern features like `FetchContent`.
-- **Threading Library:** Pthread library on POSIX platforms. On Windows, native threading APIs are used.
-- **Additional Tools:** For cross-platform builds, having the appropriate toolchain for your platform is necessary (e.g., Visual Studio for Windows, GNU toolchains for Linux).
+Make sure your compiler is configured to use the C++17 standard or newer.
 
-## Environment and System Resources
+### How to Verify Your Compiler Version
+Run the following in your terminal or command prompt:
 
-- Sufficient disk space and memory are required to build GoogleTest and your test projects.
-- Network access may be necessary if you use CMake's FetchContent modules to pull dependencies automatically.
+```bash
+# GCC
+gcc --version
 
-## Platform Detection and Tweaks
+# Clang
+clang --version
 
-GoogleTest uses internal macros to identify and adapt to the compilation environment, including OS, threading support, and exception handling capabilities. Occasionally, these may require manual overrides via compiler flags if auto-detection fails.
+# MSVC
+cl
+```
 
-## Reference to Key Internal Macros
+Consult your compiler's documentation for how to enable C++17 support. For example, with GCC or Clang, use the flag `-std=c++17` when compiling.
 
-- `GTEST_OS_WINDOWS`, `GTEST_OS_LINUX`, `GTEST_OS_MAC`, etc. indicate platform detection.
-- `GTEST_HAS_PTHREAD` controls the availability of POSIX thread support.
-- `GTEST_HAS_EXCEPTIONS` and `GTEST_HAS_RTTI` indicate support for exceptions and RTTI respectively.
+---
 
-Administrators or build engineers can define these macros explicitly if the auto-detection does not reflect the environment correctly.
+## 4. C++ Standard Requirements
 
-## Summary
+Since GoogleTest is implemented using modern C++ features, your project must be compiled with **C++17** or later.
 
-Ensure your system meets the following before starting to build or use GoogleTest:
+### Enabling C++17
+- **CMake projects:** Set `CMAKE_CXX_STANDARD` to 17 and enforce it by setting `CMAKE_CXX_STANDARD_REQUIRED`.
 
-- Supported and detected platform
-- C++17 compatible compiler
-- Required build tools (CMake 3.14+)
-- Threading library support where applicable
+```cmake
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+```
 
-Confirm these preconditions to avoid build or runtime issues.
+- **Manual compiler flags:** Add `-std=c++17` (GCC/Clang) or the appropriate MSVC flag.
+
+> <Note>
+> Compiling with earlier C++ versions will cause compilation errors or undefined behavior.
+> </Note>
+
+---
+
+## 5. Build Tools
+
+GoogleTest supports a variety of build systems to accommodate diverse user preferences.
+
+### Commonly Supported Build Tools
+- **CMake** (recommended): Provides cross-platform generation of native build files.
+- **Make**: For Unix-like environments.
+- **Ninja**: Fast build system supported via CMake.
+- **Visual Studio**: On Windows, generated project files are fully supported.
+
+### Installing Build Tools
+- **CMake:** Download from [https://cmake.org/install/](https://cmake.org/install/)
+- **Make:** Usually pre-installed on Linux/macOS or available via package managers.
+- **Ninja:** Available via package managers or [https://ninja-build.org/](https://ninja-build.org/)
+
+For detailed instructions on building GoogleTest with CMake, see [Installation on Different Platforms](installation-methods.md).
+
+---
+
+## 6. System Dependencies and Features
+
+GoogleTest detects and uses features available in your environment. Some internal features depend on platform support:
+
+| Feature                       | Availability                       |
+|-------------------------------|----------------------------------|
+| Thread Safety (pthreads)       | Linux, macOS, Windows (partial)  |
+| Exception Handling             | Enabled if compiler supports      |
+| File System Access             | Required for various GoogleTest utilities |
+| UTF-16 Wide String Support    | Platform dependent                |
+
+> <Tip>
+> On some embedded or mobile platforms, filesystem or threading support may be limited, which can restrict GoogleTest's full functionality.
+> </Tip>
+
+If you use a build environment that disables exceptions or RTTI, GoogleTest can adapt but some features might be compromised.
+
+---
+
+## 7. Troubleshooting Compatibility Issues
+
+If you encounter compile or link errors:
+
+- Verify your compiler version and C++ standard flag.
+- Ensure that your build tools are up to date and properly configured.
+- On Windows, watch out for mismatched runtime linkage (`static` vs `dynamic` C runtimes). CMake provides the option `gtest_force_shared_crt` to force dynamic linkage.
+- If using custom build scripts, confirm that all necessary compiler flags are passed correctly.
+
+For help diagnosing build or integration errors, consult the [Troubleshooting Common Setup Issues](common-issues.md) guide.
+
+---
+
+## 8. Summary
+
+| Requirement               | Minimum Version / Specification       |
+|---------------------------|-------------------------------------|
+| Operating System          | Linux, Windows Desktop, macOS       |
+| C++ Compiler             | GCC 7+, Clang 5+, MSVC 2017 Update 3|
+| C++ Standard             | C++17 or higher                      |
+| Build Tools              | CMake 3.14+, Make, Ninja, Visual Studio |
+
+Ensure your development environment meets these requirements to build and run GoogleTest and GoogleMock reliably.
+
+---
+
+## 9. Next Steps
+
+- See [Installation on Different Platforms](installation-methods.md) for detailed build instructions.
+- Refer to the [Quickstart: Building with CMake](quickstart-cmake.md) tutorial to quickly set up and run your first GoogleTest test binary.
+- Review the [GoogleTest Primer](primer.md) to learn core concepts and writing your first tests.
+
 
 ---
 
 ## Additional Resources
 
-For more detailed information about installation, configuration, and advanced platform considerations, please consult the following pages:
-
-- [Installation: Linux, macOS, and Windows](https://github.com/google/googletest/blob/main/README.md#build-with-cmake)
-- [Project Setup & Configuration](https://docs.google.com/document/d/)
-- [Integration & Ecosystem](https://github.com/google/googletest/blob/main/docs/integration.md)
-
-For platform-specific details such as Windows MingW nuances or embedded platforms, also refer to the source header files relevant for environment detection:
-
-- `gtest-port-arch.h`
-- `gtest-port.h`
-
-These files contain platform macro definitions and can inform manual configuration adjustments.
-
-<Tip>
-If your build environment fails to detect key platform or compiler features properly, manually define the expected macros in your build or compiler settings, as documented in `gtest-port.h`.
-</Tip>
+- [Supported Platforms](platforms.md) — Details on platform and compiler support
+- [GoogleTest Primer](primer.md) — Introduction and basic concepts
+- [Installation on Different Platforms](installation-methods.md) — Detailed installation
+- [Troubleshooting Common Setup Issues](common-issues.md) — Help resolving setup problems
 
 ---
 
-## Troubleshooting Common Issues
-
-- **Unsupported Compiler Version:** Ensure your compiler supports at least C++17. Older compilers will fail to compile GoogleTest.
-- **Missing pthreads on Linux/macOS:** Confirm pthread development libraries are installed and accessible.
-- **Windows Build Errors:** Use Visual Studio 2015 or later and ensure build flags are correctly set for the MSVC environment.
-- **Platform Detection Failures:** If GoogleTest misdetects OS or features, override relevant macros via compiler definitions.
-
-Use the `-D` option with your compiler or CMake to set these. Example:
-
-```bash
-cmake -DGTEST_HAS_PTHREAD=1 ..
-```
+<Check>
+Ensure you have a compiler that supports C++17, and verify your build environment matches the recommended system requirements before proceeding with installation.
+</Check>
 
 ---
 
-## Verification
-
-You can verify if your environment meets these requirements by running the CMake configuration step:
-
-```bash
-mkdir build
-cd build
-cmake ..
-```
-
-Observe messages regarding platform detection, compiler version, and features. If all checks pass without warnings, your environment is ready.
+For the latest updates and deeper integration workflows, visit the [GoogleTest GitHub repository](https://github.com/google/googletest) and refer to the [Architecture & Features Overview](../overview/architecture-features/feature-quick-tour.md) as you progress.
 
 ---
